# inrjd_VideoEditingTool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build_macos.py  build_windows.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  logging.yaml
docs/: README.md  sample-commands.md  sample-config.yaml  sample-folder-structure.md
src/: __init__.py
src/analyzer/: __init__.py  contracts.py
src/audio/: __init__.py  contracts.py
src/cli/: __init__.py  app.py  make_videos_command.py  organize_command.py  render_long_pictures_command.py  render_long_videos_command.py  render_short_videos_command.py  render_shorts_pictures_command.py  review_command.py
src/config/: __init__.py  config_loader.py  config_manager.py  config_models.py  config_validator.py  loader.py
src/effects/: __init__.py  color_presets.py  contracts.py
src/image/: __init__.py  contracts.py  image_animator.py  image_effects.py  image_loader.py  image_processor.py  image_validator.py  slideshow.py  timeline_builder.py
src/logging/: __init__.py  setup.py
src/models/: __init__.py  entities.py
src/organizer/: __init__.py  analyzer_report.py  contracts.py  exceptions.py  models.py  reporter.py  service.py  state.py
src/plugins/: __init__.py  registry.py
tests/: __init__.py  conftest.py  test_config_system.py  test_organizer_service.py  test_render_long_pictures.py  test_render_shorts_pictures.py  test_render_unified_videos.py  test_review_engine.py  test_slideshow_engine.py
(+27 files in other folders)
